--- a/src/app/views/section-welcome/section-welcome.component.html
+++ b/src/app/views/section-welcome/section-welcome.component.html
@@ -12,7 +12,7 @@
               <img [src]="item" class="w-screen h-screen object-cover block" />
           </ng-template>
           <ng-template #caption let-item>
-            <div class="bg-white border-t-4 border-[#012970] w-7/8 opacity-90 flex justify-center mx-auto">
+            <div class="bg-white border-t-4 border-[#012970] p-3 w-7/8 opacity-90 flex justify-center mx-auto">
               <div class="flex-col space-x-4 my-4 text-center">
                 <h2 [innerHTML]="resource.welcome.title"></h2>
                 <p [innerHTML]="resource.welcome.subtitle"></p>
