--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@import "primeicons/primeicons.css";
 
 /**
 * Template Name: FlexStart - v1.7.0
@@ -187,13 +186,13 @@ p-breadcrumb {
   color: #012970;
   font-family: "Nunito", sans-serif;
   margin-top: 3px;
-} 
+}
 
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
+* Desktop Navigation
 */
 .navbar {
   padding: 0;
@@ -296,7 +295,7 @@ p-breadcrumb {
 }
 
 /**
-* Mobile Navigation 
+* Mobile Navigation
 */
 .mobile-nav-toggle {
   color: #012970;
@@ -926,7 +925,6 @@ p-breadcrumb {
   margin: 0 auto 25px auto;
   list-style: none;
   text-align: center;
-  background: white;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -2283,15 +2281,15 @@ p-galleria.welcome .p-galleria-caption {
   background: transparent !important;
 }
 
-.p-galleria-next-button, 
+.p-galleria-next-button,
 .p-galleria-prev-button {
   background: #012970 !important;
   color: #fff !important;
   opacity: 0.5;
-  
+
 }
 
-.p-galleria-next-button:hover, 
+.p-galleria-next-button:hover,
 .p-galleria-prev-button:hover {
   opacity: 1;
 }
@@ -2310,7 +2308,7 @@ p-menubar > div.p-menubar {
   border: 0;
   font-weight: 600;
 
-  a.p-menubar-item-link, 
+  a.p-menubar-item-link,
   a.p-menubar-item-link > span.p-menubar-item-icon {
     color: #013289 !important;
 
@@ -2352,4 +2350,24 @@ p-menubar > div.p-menubar {
   color: #fff;
   border: #012970 solid 1px;
   opacity: 0.5;
+}
+
+.menu-list {
+  list-style: none;
+}
+
+.menu-list li a {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 0.375rem;
+  text-decoration: none;
+}
+
+.menu-list li a:hover {
+  background-color: #e5e7eb; /* Tailwind gray-200 */
+}
+
+.menu-list li ul {
+  padding-left: 1rem;
 }
