--- a/src/app/views/section-portfolio/section-portfolio.component.html
+++ b/src/app/views/section-portfolio/section-portfolio.component.html
@@ -31,11 +31,11 @@
       </div>
     </div>
 
-    <div id="portfolio-container" class="portfolio-container grid lg:grid-cols-3 md:grid-cols-2 gap-6" data-aos="fade-up" data-aos-delay="200">
+    <div id="portfolio-container" class="portfolio-container relative" data-aos="fade-up" data-aos-delay="200">
       <div
-        *ngFor="let product of products"
+        *ngFor="let product of products()"
         [ngClass]="product.filterClasses"
-        class="portfolio-item"
+        class="portfolio-item px-3 mb-6 w-full md:w-1/2 lg:w-1/3"
       >
         <div class="portfolio-wrap">
           <img
