--- a/src/app/views/auth/signin/signin.component.html
+++ b/src/app/views/auth/signin/signin.component.html
@@ -1,30 +1,35 @@
 <app-breadcrumbs nodeParent="Accueil" nodeParentUrl="home" nodeChild="Se connecter"></app-breadcrumbs>
 
-<section class="inner-page">
-  <div class="container">
-    <div class="row justify-content-md-center">
-      <div class="col-sm-6 formStyle">
-        <div class="row justify-content-md-center">
+<section class="h-full inner-page">
+    <div class="flex justify-center">
+      <div class="w-1/2 formStyle">
+        <div class="flex justify-center">
           <h2 class="styleTitle">Se Connecter</h2>
         </div>
 
-        <form class="row g-3" [formGroup]="signinForm" (ngSubmit)="onSubmit()">
-          <div class="col-md-6">
-            <div class="form-group">
+        <form class="flex flex-col space-y-8" [formGroup]="signinForm" (ngSubmit)="onSubmit()">
+            <p-floatlabel class="flex w-1/2 mx-auto">
               <label for="email">Adresse mail</label>
-              <input type="text" id="email" class="form-control" formControlName="email">
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <label for="password">Mot de passe</label>
-              <input type="password" id="password" class="form-control" formControlName="password">
-            </div>
-          </div>
-          <button class="btn btn-primary" type="submit" [disabled]="signinForm.invalid">Se Connecter</button>
+              <input type="text" pInputText id="email" formControlName="email" class="w-full">
+            </p-floatlabel>
+            <p-floatlabel class="flex w-1/2 mx-auto">
+              <label class="z-1" for="password">Mot de passe</label>
+              <p-password type="password"  id="password" formControlName="password" [inputStyleClass]="'w-full'" promptLabel="Saisir un mot de passe"
+              class="w-full" [styleClass]="'w-full'" [toggleMask]="true" [feedback]="false">
+            <!-- <ng-template #footer>
+                <p-divider />
+                <ul class="pl-2 my-0 leading-normal">
+                    <li>Au moins une minuscule</li>
+                    <li>Au moins une majuscule</li>
+                    <li>Au moins un chiffre</li>
+                    <li>8 caractères minimum</li>
+                </ul>
+            </ng-template> -->
+            </p-password>
+            </p-floatlabel>
+          <button class="w-1/2 mx-auto bg-blue-600 text-white font-semibold px-6 py-2 rounded disabled:opacity-50 disabled:cursor-not-allowed hover:bg-blue-700 transition" type="submit" [disabled]="signinForm.invalid">Se Connecter</button>
         </form>
         <p class="text-danger">{{ errorMessage }}</p>
       </div>
     </div>
-  </div>
 </section>
