--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -15,9 +15,14 @@
   scroll-behavior: smooth;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+  height: 100%;
 }
 
 a {
