--- a/src/app/Shared/Component/header/header.component.html
+++ b/src/app/Shared/Component/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="header" class="header w-full fixed top-0 absolute">
   <div class="flex items-center justify-between">
     <a
-      [routerLink]="resource.layout.header.router.routes.home"
+      [routerLink]="resource.router.routes.home"
       routerLinkActive="router-link-active"
       class="flex logo items-center nav-link"
     >
