--- a/src/app/views/section-contact/section-contact.component.html
+++ b/src/app/views/section-contact/section-contact.component.html
@@ -26,7 +26,7 @@
               >
                 <div
                   *ngIf="f.name.errors.required"
-                  [innerText]="resource.form.name_mandatory"
+                  [innerText]="resource.error.name_mandatory"
                 ></div>
               </div>
             </div>
@@ -47,9 +47,9 @@
               >
                 <div
                   *ngIf="f.email.errors.required"
-                  [innerText]="resource.form.email_mandatory"
+                  [innerText]="resource.error.email_mandatory"
                 ></div>
-                <div *ngIf="f.email.errors.email" [innerText]="resource.form.email_invalid"></div>
+                <div *ngIf="f.email.errors.email" [innerText]="resource.error.email_invalid"></div>
               </div>
             </div>
 
@@ -69,7 +69,7 @@
               >
                 <div
                   *ngIf="f.subject.errors.required"
-                  [innerText]="resource.form.subject_mandatory"
+                  [innerText]="resource.error.subject_mandatory"
                 ></div>
               </div>
             </div>
@@ -90,7 +90,7 @@
               >
                 <div
                   *ngIf="f.message.errors.required"
-                  [innerText]="resource.form.message_mandatory"
+                  [innerText]="resource.error.message_mandatory"
                 ></div>
               </div>
             </div>
