--- a/src/app/views/admin/perlertype-form/perlertype-form.component.html
+++ b/src/app/views/admin/perlertype-form/perlertype-form.component.html
@@ -15,7 +15,7 @@
   nodeChildChild="Modifier"
 ></app-breadcrumbs>
 
-<section class="inner-page" style="min-height: 32rem">
+<section style="min-height: 32rem">
   <div class="container">
     <div class="flex justify-center">
       <div class="col-sm-6 formStyle">
