--- a/src/app/views/admin/tag-list/tag-list.component.html
+++ b/src/app/views/admin/tag-list/tag-list.component.html
@@ -1,6 +1,6 @@
 <app-breadcrumbs nodeParent="Accueil" nodeParentUrl="home" nodeChild="Tags"></app-breadcrumbs>
 
-<section class="inner-page">
+<section class="h-full py-18">
   <div class="container">
     <div class="flex justify-center">
       <div class="w-full lg:w-2/12">
