--- a/src/app/views/admin/user-edit/user-edit.component.html
+++ b/src/app/views/admin/user-edit/user-edit.component.html
@@ -6,7 +6,7 @@
   nodeChildChild="Modifier un profil"
 ></app-breadcrumbs>
 
-<section class="inner-page">
+<section class="h-full py-18">
   <div class="container">
     <div class="flex justify-center">
       <div class="col-sm-8">
