--- a/src/app/views/admin/user-list/user-list.component.html
+++ b/src/app/views/admin/user-list/user-list.component.html
@@ -4,7 +4,7 @@
   nodeChild="Utilisateurs"
 ></app-breadcrumbs>
 
-<section class="inner-page">
+<section class="h-full py-18">
   <div class="container">
     <table class="min-w-full border-collapse border border-gray-300">
       <thead>
