--- a/src/app/views/auth/signup/signup.component.html
+++ b/src/app/views/auth/signup/signup.component.html
@@ -4,7 +4,7 @@
   [nodeChild]="this.resource.signup.title"
 ></app-breadcrumbs>
 
-<section class="h-full inner-page">
+<section class="h-full py-18">
   <div class="flex justify-center">
     <div class="w-1/2 formStyle">
       <div class="flex justify-center">
