--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,5 +1,5 @@
 <app-section-welcome></app-section-welcome>
-<main id="main">
+<main id="main" class="mt-5">
   <app-section-portfolio></app-section-portfolio>
   <app-section-faq></app-section-faq>
   <app-section-contact></app-section-contact>
