--- a/src/app/views/admin/contact-list/contact-list.component.html
+++ b/src/app/views/admin/contact-list/contact-list.component.html
@@ -1,6 +1,6 @@
 <app-breadcrumbs nodeParent="Accueil" nodeParentUrl="home" nodeChild="Contacts"></app-breadcrumbs>
 
-<section class="inner-page">
+<section class="h-full py-18">
   <div class="container">
     <table class="table table-striped">
       <thead>
