--- a/src/app/views/admin/perlertype-list/perlertype-list.component.html
+++ b/src/app/views/admin/perlertype-list/perlertype-list.component.html
@@ -4,7 +4,7 @@
   nodeChild="PerlerTypes"
 ></app-breadcrumbs>
 
-<section class="inner-page">
+<section class="h-full py-18">
   <div class="container">
     <div class="flex justify-center">
       <div class="w-full lg:w-2/12">
