--- a/src/app/views/admin/tag-form/tag-form.component.html
+++ b/src/app/views/admin/tag-form/tag-form.component.html
@@ -15,7 +15,7 @@
   nodeChildChild="Modifier"
 ></app-breadcrumbs>
 
-<section class="inner-page">
+<section class="h-full py-18">
   <div class="container">
     <div class="flex justify-center">
       <div class="col-sm-6 formStyle">
