--- a/src/app/views/profil/profil.component.html
+++ b/src/app/views/profil/profil.component.html
@@ -1,6 +1,6 @@
 <app-breadcrumbs nodeParent="Accueil" nodeParentUrl="home" nodeChild="Profil"></app-breadcrumbs>
 
-<section class="inner-page">
+<section class="h-full py-18">
   <div class="container">
     <div class="flex">
       <div class="col">
