--- a/src/app/Shared/Component/theme-switch/theme-switch.component.html
+++ b/src/app/Shared/Component/theme-switch/theme-switch.component.html
@@ -8,6 +8,6 @@
     [class.text-black]="current === opt.value && current !== 'dark'"
     [class.text-white]="current === opt.value && current === 'dark'"
   >
-    {{ opt.label }}
+    {{ opt.icon }}
   </button>
 </div>
